--- a/site/prachi.html
+++ b/site/prachi.html
@@ -4,7 +4,7 @@
 	<title>hello cousera</title>
 </head>
 <body>
-	<h1>hello cousera. its great courdr</h1>
+	<h1>hello cousera. its great course.</h1>
 
 </body>
 </html>
